--- a/src/main/resources/static/greeting.html
+++ b/src/main/resources/static/greeting.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 <p th:text="'Hello, ' + ${name} + '!'"></p>
+<div>
+    <h2>Categories</h2>
+    <ul>
+        <li th:each="category : ${categories}" th:text="${category.name}"></li>
+    </ul>
+</div>
 </body>
 </html>
