authentication works better, logout added

--- a/src/main/resources/static/mainPage.html
+++ b/src/main/resources/static/mainPage.html
@@ -8,6 +8,7 @@
 <header>
     <img th:src="${logo}" alt="Website Logo">
     <h1 th:text="${websiteName}"></h1>
+    <button>    <a href="/logout">Logout</a></button>
 </header>
 
 <main>
