--- a/src/main/resources/static/Karolspage.html
+++ b/src/main/resources/static/Karolspage.html
@@ -8,16 +8,31 @@
 <body>
 <main class="container">
     <div class="heading">
+        <div class="logo">
+            LOGO
+        </div>
+        <div class="logowanie">
+            Zaloguj sie
+        </div>
     </div>
+    <div class="dwaf">
     <div class="leftbar">
-        <ol>
+        <ol class="lmenu">
             <li>Ustawienia Sklepu</li>
             <li>Kategorie</li>
             <li>Produkty</li>
         </ol>
 
     </div>
-    <div class="contentspace"></div>
+    <div class="contentspace">
+        <table>
+            <tr >
+                <td class="zdjecie">zdjecie</td><td class="nazwap">Nazwa</td><td class="kup">kup</td>
+            </tr>
+
+        </table>
+    </div>
+    </div>
 </main>
 </body>
 
