--- a/src/main/resources/static/categories.html
+++ b/src/main/resources/static/categories.html
@@ -8,7 +8,7 @@
 <div id="Fragment">
     <div class="header">
         <h2>Categories</h2>
-        <button class="add-button" th:onclick="'addCategory()'">Add Category</button>
+        <button class="add-button" th:if="${isAdmin}" th:onclick="'addCategory()'">Add Category</button>
     </div>
     <table class="table">
         <thead>
