category edit button, attempt to update the logo, updating the name works

--- a/src/main/resources/static/categories.html
+++ b/src/main/resources/static/categories.html
@@ -21,6 +21,9 @@
         <tr th:each="category : ${categories}">
             <td data-label="Name" th:text="${category.name}">Category Name</td>
             <td data-label="Description" th:text="${category.description}">Category Description</td>
+            <td th:if="${isAdmin}" data-label="Actions">
+                <button th:onclick="'editProduct(' + ${product.id} + ')'">Edit</button>
+            </td>
         </tr>
         </tbody>
     </table>
