--- a/src/main/resources/static/settings.html
+++ b/src/main/resources/static/settings.html
@@ -1,41 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <style>
-        .form-group {
-        margin-bottom: 15px;
-    }
-
-    label {
-        display: block;
-        margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="file"] {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-    }
-
-    .save-btn {
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-
-    .save-btn:hover {
-        background-color: #45a049;
-    }
-    </style>
-        <title>Website Settings</title>
-        <link rel="stylesheet" href="css/contentspace.css">
-    </head>
+    <title>Website Settings</title>
+    <link rel="stylesheet" href="css/settings.css">
+</head>
 <body>
 <div id="settingsFragment">
     <div class="header">
@@ -57,6 +25,7 @@
         </div>
         <button type="submit" class="save-btn">Save Settings</button>
     </form>
+    <div th:if="${errorMessage}" th:text="${errorMessage}" class="error-message"></div>
 </div>
 </body>
 </html>
