i dont even know what to do

--- a/src/main/resources/static/categories.html
+++ b/src/main/resources/static/categories.html
@@ -22,7 +22,7 @@
             <td data-label="Name" th:text="${category.name}">Category Name</td>
             <td data-label="Description" th:text="${category.description}">Category Description</td>
             <td th:if="${isAdmin}" data-label="Actions">
-                <button th:onclick="'editProduct(' + ${product.id} + ')'">Edit</button>
+                <button th:onclick="'editProduct(' + ${category.id} + ')'">Edit</button>
             </td>
         </tr>
         </tbody>
