--- a/src/main/resources/static/karolsPage.html
+++ b/src/main/resources/static/karolsPage.html
@@ -23,6 +23,7 @@
             <button class="menu-btn" th:if="${isAdmin}" data-target="/settings">Ustawienia Sklepu</button>
             <button class="menu-btn" data-target="/categories">Kategorie</button>
             <button class="menu-btn" data-target="/products">Produkty</button>
+            <button class="menu-btn" data-target="/productsForm">Dodaj produkt</button>
         </nav>
         <section class="contentspace" id="contentspace"></section>
     </div>
