--- a/src/main/resources/static/karolsPage.html
+++ b/src/main/resources/static/karolsPage.html
@@ -23,8 +23,8 @@
             <button class="menu-btn" th:if="${isAdmin}" data-target="/settings">Ustawienia Sklepu</button>
             <button class="menu-btn" data-target="/categories">Kategorie</button>
             <button class="menu-btn" data-target="/products">Produkty</button>
-            <button class="menu-btn" data-target="/productsForm">Dodaj produkt</button>
-        </nav>
+            <button class="menu-btn menu-btn-bottom" th:if="${isAdmin}" data-target="/productsForm">Dodaj produkt</button>
+    </nav>
         <section class="contentspace" id="contentspace"></section>
     </div>
 </main>
