--- a/src/main/resources/static/productForm.html
+++ b/src/main/resources/static/productForm.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <link rel="stylesheet" href="css/productForm.css">
+    <title>Add Product</title>
+</head>
+<body>
 <div id="popup" class="popup">
     <div class="popup-content">
-        <div th:if="${not #strings.isEmpty(successMessage)}" th:text="${successMessage}"></div>
+        <div th:if="${not #strings.isEmpty(successMessage)}" class="success-message" th:text="${successMessage}"></div>
 
         <form th:action="@{/products/save}" method="post" enctype="multipart/form-data" class="product-form">
-        <div><label for="productName">Nazwa:</label><input type="text" id="productName" name="productName" required></div>
-            <div><label for="productDescription">Opis:</label><br><textarea id="productDescription" name="productDescription" rows="4" cols="50" required></textarea></div>
-            <div><label for="productPrice">Cena:</label><input type="number" id="productPrice" name="productPrice" required></div>
-            <div><label for="productCategory">Kategoria:</label>
+            <h2>Add New Product</h2>
+            <div class="form-group">
+                <label for="productName">Nazwa:</label>
+                <input type="text" id="productName" name="productName" placeholder="Enter product name" required>
+            </div>
+            <div class="form-group">
+                <label for="productDescription">Opis:</label>
+                <textarea id="productDescription" name="productDescription" placeholder="Product description" rows="4" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="productPrice">Cena:</label>
+                <input type="number" id="productPrice" name="productPrice" placeholder="0.00" step="0.01" required>
+            </div>
+            <div class="form-group">
+                <label for="productCategory">Kategoria:</label>
                 <select id="productCategory" name="productCategory" required>
-                    <option th:each="category : ${categories}"
-                            th:value="${category.id}" th:text="${category.name}"></option>
-                </select></div>
-            <div><label for="productImage">Zdjęcie:</label><input type="file" id="productImage" name="productImage"></div>
-            <button type="submit" class="save-btn">Save product</button>
+                    <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                </select>
+            </div>
+            <!-- <div class="form-group">
+                <label for="productImage">Zdjęcie:</label>
+                <input type="file" id="productImage" name="productImage">
+            </div> -->
+            <button type="submit" class="save-btn">Save Product</button>
         </form>
     </div>
 </div>
+</body>
 </html>
