--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -8,7 +8,6 @@
     <div id="fragment">
         <div class="header">
             <h2>Products</h2>
-            <button class="add-button" th:if="${isAdmin}" onclick="togglePopup()">Add Product</button>
         </div>
         <div id="productList" th:fragment="productList">
             <table class="table">
@@ -27,6 +26,10 @@
                     <td data-label="Category" th:text="${product.categoryName}">Product Category</td>
                     <td th:if="${isAdmin}" data-label="Actions">
                         <button th:onclick="'editProduct(' + ${product.id} + ')'">Edit</button>
+                        <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display: inline;">
+                            <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+                            <button type="submit" class="delete-btn">Delete</button>
+                        </form>
                     </td>
                 </tr>
                 </tbody>
