--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -3,6 +3,9 @@
 <head>
     <title>Products Fragment</title>
     <link rel="stylesheet" href="css/contentspace.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="fragment">
@@ -25,7 +28,7 @@
                     <td data-label="Description" th:text="${product.description}">Product Description</td>
                     <td data-label="Category" th:text="${product.categoryName}">Product Category</td>
                     <td th:if="${isAdmin}" data-label="Actions">
-                        <button th:onclick="'editProduct(' + ${product.id} + ')'">Edit</button>
+                        <button class="menu-btn" th:attr="data-target=|@{/products/edit/{id}(id=${product.id})}|">Edit</button>
                         <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display: inline;">
                             <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
                             <button type="submit" class="delete-btn">Delete</button>
