working edit button

--- a/src/main/resources/static/adminPage.html
+++ b/src/main/resources/static/adminPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="css/karolsPage.css">
+    <link rel="stylesheet" href="css/mainPage.css">
 </head>
 <body>
 <main class="container">
