--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -27,11 +27,11 @@
                     <td data-label="Name" th:text="${product.name}">Product Name</td>
                     <td data-label="Description" th:text="${product.description}">Product Description</td>
                     <td data-label="Category" th:text="${product.categoryName}">Product Category</td>
-                    <td th:if="${isAdmin}" data-label="Actions">
-                        <button type="button" class="action-btn edit-btn" th:attr="data-target=|@{/products/edit/{id}(id=${product.id})}|">Edit</button>
-                        <form class="action-btn delete-btn-form" th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display: inline;">
+                    <td th:if="${isAdmin}" data-label="Actions" style="white-space: nowrap;">
+                        <button type="button" class="menu-btn" th:attr="data-target=|@{/products/edit/{id}(id=${product.id})}|">Edytuj</button>
+                        <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display: inline;">
                             <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
-                            <button type="submit" class="action-btn delete-btn">Delete</button>
+                            <button type="submit" class="delete-btn">Usuń</button>
                         </form>
                     </td>
                 </tr>
