--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,28 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />-->
     <style>
-    body {
-    font-family: Arial, sans-serif;
-}
+        body {
+            font-family: Arial, sans-serif;
+        }
 
-.login-container, .register-container {
-    width: 300px;
-    margin: 100px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+        .login-container, .register-container {
+            width: 300px;
+            margin: 100px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
-div {
-    margin-bottom: 10px;
-}
+        div {
+            margin-bottom: 10px;
+        }
 
-label {
-    margin-right: 10px;
-}
-</style>
+        label {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
 <div class="login-container">
@@ -32,6 +31,9 @@ label {
         <div><label for="password">Password:</label><input type="password" id="password" name="password"/></div>
         <div><input type="submit" value="Log in"/></div>
     </form>
+    <div>
+        <button onclick="location.href='/registerForm'" style="margin-top: 10px;">Register</button>
+    </div>
 </div>
 </body>
 </html>
