--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -2,7 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <style>
+    body {
+        font-family: Arial, sans-serif;
+    }
+
+    .login-container, .register-container {
+        width: 300px;
+        margin: 100px auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    div {
+        margin-bottom: 10px;
+    }
+
+    label {
+        margin-right: 10px;
+    }
+    </style>
 </head>
 <body>
 <div class="register-container">
